@@ -1,13 +1,21 @@
 package bookhive.bookhiveserver.domain.clova.service;
 
+import bookhive.bookhiveserver.domain.clova.client.ClovaSearchApiClient;
+import bookhive.bookhiveserver.domain.clova.dto.request.SearchRequest;
+import bookhive.bookhiveserver.domain.clova.dto.response.KeywordsResponse;
+import bookhive.bookhiveserver.domain.clova.dto.response.SearchTypeResponse;
 import bookhive.bookhiveserver.domain.post.dto.PostResponse;
 import bookhive.bookhiveserver.domain.post.entity.Post;
 import bookhive.bookhiveserver.domain.post.repository.PostRepository;
+import bookhive.bookhiveserver.domain.tag.entity.Tag;
+import bookhive.bookhiveserver.domain.tag.repository.TagRepository;
 import bookhive.bookhiveserver.domain.user.entity.User;
 import bookhive.bookhiveserver.domain.user.repository.UserRepository;
 import bookhive.bookhiveserver.global.exception.ErrorMessage;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -18,20 +26,69 @@ import org.springframework.web.server.ResponseStatusException;
 @RequiredArgsConstructor
 public class SearchService {
 
+    private final ClovaSearchApiClient searchApiClient;
     private final PostRepository postRepository;
+    private final TagRepository tagRepository;
     private final UserRepository userRepository;
+
+    public SearchTypeResponse checkSearchType(SearchRequest request) {
+
+        return searchApiClient.checkSearchType(request.getQuestion());
+    }
+
+    public List<PostResponse> searchByKeyword(String keyword, String token) {
+        User user = userRepository.findByToken(token)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorMessage.INVALID_TOKEN.toString()));
+
+        List<Post> posts = postRepository.findByUserAndKeyword(user, keyword);
+
+        return posts.stream()
+                .map(PostResponse::new)
+                .toList();
+    }
+
+    public List<PostResponse> searchByAI(SearchRequest request, String token) {
+        User user = userRepository.findByToken(token)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorMessage.INVALID_TOKEN.toString()));
+
+        List<String> tagNames = tagRepository.findAllByUser(user).stream()
+                .map(Tag::getValue)
+                .collect(Collectors.toList());
+        String originTags = String.join(", ", tagNames);
+
+        KeywordsResponse keywords = searchApiClient.extractKeywords(request.getQuestion(), originTags);
+
+        List<Post> posts = postRepository.findByUser(user);
+
+        // 키워드가 태그 리스트에 존재하거나, 내용에 포함된 게시글 조회
+        Set<Post> searchedPosts = posts.stream()
+                .filter(post -> keywords.getKeywords().stream()
+                        .anyMatch(keyword -> {
+                            Pattern pattern = Pattern.compile(Pattern.quote(keyword), Pattern.CASE_INSENSITIVE);
+                            boolean contentMatches = pattern.matcher(post.getContent()).find();
+
+                            boolean tagMatches = post.getPostTags().stream()
+                                    .map(postTag -> postTag.getTag().getValue())
+                                    .anyMatch(tagValue -> tagValue.equalsIgnoreCase(keyword));
+
+                            return contentMatches || tagMatches;
+                        })
+                )
+                .collect(Collectors.toSet());
+
+        return searchedPosts.stream().map(PostResponse::new).toList();
+    }
 
     public List<PostResponse> getRandomPosts(String token) {
         User user = userRepository.findByToken(token)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorMessage.INVALID_TOKEN.toString()));
 
-        List<Post> allPosts = postRepository.findByUser(user);
+        List<Post> posts = postRepository.findByUser(user);
+        Collections.shuffle(posts);
 
-        Collections.shuffle(allPosts);
-
-        return allPosts.stream()
+        return posts.stream()
                 .limit(3)
                 .map(PostResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
